[project]
name = "bias-ext-likes"
version = "0.1.0"
description = "Bias likes Extension"
requires-python = ">=3.11"
dependencies = ["bias-core>=0.1,<0.2"]
[project.entry-points."bias.extensions"]
likes = "bias_ext_likes.backend.ext:extend"
[tool.setuptools.packages.find]
where = ["."]
include = ["bias_ext_likes*"]
